include/dm.h

/* ── Status codes ───────────────────────────────────────────────────────── */
typedef enum {
    DM_OK                = 0,
    DM_ERR_GENERIC       = -1,
    DM_ERR_IO            = -2,
    DM_ERR_MEMORY        = -3,
    DM_ERR_INVALID_PARAM = -4,
    DM_ERR_NOT_FOUND     = -5,
    DM_ERR_INCOMPATIBLE  = -6,
    DM_ERR_NOT_SUPPORTED = -7
} DM_Status;
/* ─────────────────────────────────────────────────────────────────────────
 * § 8  Tensor (primitive operations — C-only, no TF dependency)
 * ───────────────────────────────────────────────────────────────────────── */

typedef struct {
    int    n, c, h, w;
    float *data;
} DM_Tensor;
DM_API DM_Status dm_tensor_alloc (DM_Tensor *t, int n, int c, int h, int w);
DM_API void      dm_tensor_free  (DM_Tensor *t);
DM_API void      dm_tensor_fill  (DM_Tensor *t, float value);
DM_API void      dm_op_relu          (DM_Tensor *t);
DM_API DM_Status dm_op_tensor_add    (DM_Tensor *out, const DM_Tensor *in);
DM_API DM_Status dm_op_max_pool2d_same(const DM_Tensor *in, DM_Tensor *out, int kernel, int stride);
DM_API DM_Status dm_op_batch_norm    (DM_Tensor *t, const float *gamma, const float *beta, const float *mean, const float *var, float eps);